# ranked-searcher

./: Cargo.toml  Formula.rb  README.md
.github/workflows/: workflow.yml
formula/: template.rb
scripts/: install.sh
src/: document.rs  lexer.rs  main.rs  search.rs
test_data/: .config  Wintertime-Rebus-Template.docx  climate_change_research.docx  data.txt  more_data.txt
