[package]
name = "ranked-searcher"
version = "0.0.0"
edition = "2024"
authors = ["Lars Kniep <larskniep@gmail.com>"]
description = "Search text documents using tf-idf formula"
license = "MIT OR Apache-2.0"
repository = "https://github.com/larscom/ranked-searcher"
readme = "README.md"
keywords = ["search", "tf-idf", "ranked", "document", "text", "term"]
categories = ["command-line-utilities"]
exclude = [".github", "test_data/*"]

[[bin]]
name = "rs"
path = "src/main.rs"

[dependencies]
colored = "3.0.0"
ignore = "0.4.24"
rayon = "1.11.0"
regex = "1.12.2"
roxmltree = "0.21.1"
unicode-segmentation = "1.12.0"
zip = "6.0.0"
