[package]
name = "ranked-searcher"
version = "0.0.0"
edition = "2024"
authors = ["Lars Kniep <larskniep@gmail.com>"]
description = "Search inside text files using tf-idf formula, showing the most relevant search at the top"
license = "MIT"
repository = "https://github.com/larscom/ranked-searcher"
readme = "README.md"
keywords = ["search", "tf-idf", "ranked", "document", "text"]
categories = ["command-line-utilities", "text-processing"]
exclude = [".github", "test_data/*"]

[dependencies]
colored = "3.1.1"
ignore = "0.4.25"
rayon = "1.11.0"
regex = "1.12.3"
roxmltree = "0.21.1"
unicode-segmentation = "1.12.0"
zip = "7.2.0"
